--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script
-  type="text/javascript"
-  src="../node_modules/tw-elements/dist/js/tw-elements.umd.min.js"></script>
+      type="text/javascript"
+      src="/node_modules/tw-elements/dist/js/tw-elements.umd.min.js"
+    ></script>
   </body>
 </html>
